# coin-flip-solana-example

./: Cargo.toml  README.md  package-lock.json  package.json
client/: main.ts
src/: lib.rs
