[package]
name = "coin-flip-solana-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "coin_flip_solana_example"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.11"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0.24"
